--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Simple internal URL shortener" />
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="/static/normalize.css" />
-    <link rel="stylesheet" href="/static/app.css" />
-    <script src="/static/webcomponents.min.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='normalize.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='app.css') }}" />
+    <script src="{{ url_for('static', filename='webcomponents.min.js') }}"></script>
   </head>
   <body>
     <h1 class="title"><a href="{{ url_for('index') }}">Goto</a></h1>
@@ -73,7 +73,7 @@
       {% endif -%}
       </section>
     </div>
-    <script async src="/static/time-elements.js"></script>
-    <script async src="/static/sortable.min.js"></script>
+    <script async src="{{ url_for('static', filename='time-elements.js') }}"></script>
+    <script async src="{{ url_for('static', filename='sortable.min.js') }}"></script>
   </body>
 </html>
